<?xml version="1.0"?>
<package format="3">
  <name>ros2_unitree_legged_control</name>
  <version>4.9.0</version>
  <description>ROS 2 version of of unitree_legged_controller.</description>
  <!-- <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer> -->
  <!-- <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer> -->
  <maintainer email="atharvagh1@gmail.com">Atharva Ghotavadekar</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>backward_ros</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>ros2_unitree_legged_msgs</depend>
  <depend>generate_parameter_library</depend>
  <depend>urdf</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface_testing</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
